--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ a:hover:before{
     
     
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-    <i class="background"></i><a href="kannada/index.html">HOME
+    <i class="background"></i><a href="https://scorpioninformer.github.io/Rajegowda///index.html">HOME
     <h3 style="color:red; font-size:25px;font-weight:10px;">Click The Button</h3></a>
   
 
